--- a/projects/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -75,7 +75,20 @@
 	</div>
 </section>
 
-<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+	<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-sm">Edit</button></a>
+	<a href="/" ><button id="delete-venue" data-id="{{ venue.id }}"  class="btn btn-primary btn-sm">Delete</button></a>
+
+<script>
+	const deleteBtn = document.getElementById('delete-venue');
+	deleteBtn.onclick = function(e) {
+		const venueID = e.target.dataset['id'];
+		fetch('/venues/' + venueID, {
+		  method: 'DELETE'
+		})
+	  }
+</script>
+
 
 {% endblock %}
+
 
